--- a/outn.cls
+++ b/outn.cls
@@ -514,10 +514,7 @@
 		\@solnmarksbox{#1}{#2}%
 	}	
 	\newcommand{\@@solnmarks}[2][\unskip]{%
-          \ifmeasuring@\relax
-          \else
-           \@solnmarksbox{#1}{\@update@totals{#2}}%
-          \fi
+        \@solnmarksbox{#1}{\@update@totals{#2}}%
 	}
 	\newcommand{\@solnmarksbox}[2]{%
 		\marginnote{\hfill\small\sf %
@@ -591,8 +588,10 @@
     \if@nan%
       #1% Render content as-is
     \else%
-      \global\advance\subtot@l#1\p@%
-      \global\advance\tot@l#1\p@%
+      \ifmeasuring@\relax\else%
+        \global\advance\subtot@l#1\p@%
+        \global\advance\tot@l#1\p@%
+      \fi
       \setlength{\@mk}{#1pt}%
       \expandafter\@render@mk\the\@mk% Render using mark filter
     \fi
