--- a/icmatemplate.tex
+++ b/icmatemplate.tex
@@ -15,7 +15,7 @@
 \cutoffdate{26 November 2014}
 \coversmaterialin{Units 1,2 and 3.}
 %\optiontext{} %Can be used to change text appearing at top of multi-choice options.
-\oulogofilebase{OU_Master_LOGO_BLACK_17-5mmForA4width}% Overrides internal OU logo specification
+%\oulogofilebase{OU_Master_LOGO_BLACK_17-5mmForA4width}% Overrides internal OU logo specification
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % INSTRUCTIONS ON FIRST PAGE
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
